updated captions and fixed feature h3 alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -214,8 +214,8 @@ body {
 
 .feature-title {
     display: flex;
-    justify-content: left;
-    align-items: left;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     margin-bottom: 2rem;
 }
